--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "^4.1.13",
     "chart.js": "^4.5.0",
+    "fa-icons": "^0.2.0",
     "framer-motion": "^12.23.22",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
