--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
     "chart.js": "^4.5.0",
     "fa-icons": "^0.2.0",
     "framer-motion": "^12.23.22",
+    "lottie-react": "^2.4.1",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3",
+    "react-scroll": "^1.9.3",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
