--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.13.1",
     "chart.js": "^4.5.0",
     "fa-icons": "^0.2.0",
     "framer-motion": "^12.23.22",
